# computecpp-cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  program.cpp  program.h
